# fd2sfd

./: Makefile.in  README.md  README.os-include  README.os-lib.fd  README.os-lib.sfd  configure  configure.in  fd2inline.c  fd2sfd.readme.in  gg-fd2sfd.spec  gg-fd2sfd.spec.in
