dnl Process this file with autoconf to produce a configure script.
AC_INIT(fd2inline.c, 1.0, martin@blom.org)

VERSION=1.0
DATE=25.07.2003
AC_SUBST(VERSION)
AC_SUBST(DATE)

AC_CANONICAL_SYSTEM
AC_PROG_MAKE_SET

AC_CHECK_TOOL( CC, gcc, : ) 
AC_PROG_CC
AC_PROG_INSTALL

AC_OUTPUT(Makefile fd2sfd.readme gg-fd2sfd.spec cross/bin/gg-fix-includes)
